common/ferrostar/src/snapshots/ferrostar__simulation__tests__None.snap
---
source: ferrostar/src/simulation.rs
expression: states
---
- current_location:
    coordinates:
      lat: 0
      lng: 0
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 5
    speed: ~
    altitude: ~
    vertical_accuracy: ~
  remaining_locations:
    - lat: 0.0001
      lng: 0.0001
    - lat: 0.0002
      lng: 0.0002
    - lat: 0.0003
      lng: 0.0003
  bias: None
- current_location:
    coordinates:
      lat: 0.0001
      lng: 0.0001
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 5
    speed: ~
    altitude: ~
    vertical_accuracy: ~
  remaining_locations:
    - lat: 0.0002
      lng: 0.0002
    - lat: 0.0003
      lng: 0.0003
  bias: None
- current_location:
    coordinates:
      lat: 0.0002
      lng: 0.0002
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 45
      accuracy: 5
    speed: ~
    altitude: ~
    vertical_accuracy: ~
  remaining_locations:
    - lat: 0.0003
      lng: 0.0003
  bias: None
- current_location:
    coordinates:
      lat: 0.0003
      lng: 0.0003
    horizontal_accuracy: 0
    course_over_ground:
      degrees: 180
      accuracy: 5
    speed: ~
    altitude: ~
    vertical_accuracy: ~
  remaining_locations: []
  bias: None
